fixed howItWorks interaction on mobile

--- a/styles/legacy/_section_how-it-works.scss
+++ b/styles/legacy/_section_how-it-works.scss
@@ -17,6 +17,7 @@
       align-items: center;
       padding-right: 21px;
       padding-left: 21px;
+      cursor: pointer;
       & .title__mobile-style {
         color: #fff;
         display: flex;
